feat: [CHK-4221] bump java version 17 -> 21 (#409)
* feat: bump java version 17 -> 21

* feat: bump java version 17 -> 21

* fix: maven compiler plugin version and configuration fix

* fix: double configuration in pom

* chore: ecommerce commons version

* chore: pipeline

* chore: tests

* chore: explicit request mapping for controller

* chore: re-enstablish normal code review pipeline flow

* fix: openapi code generation (#413)

* chore: code review

* chore: spotless

* Update .devops/code-review-pipelines.yml

merged needed changes in ecommerce-local main branch

---------

Co-authored-by: Pietro Tota <115724836+pietro-tota@users.noreply.github.com>